katex support added

--- a/index.html
+++ b/index.html
@@ -3,14 +3,8 @@
         <link rel="stylesheet" href="lib/highlight/styles/default.css">
         <script type="text/javascript" src="lib/highlight/highlight.pack.js"></script>
 
-        <script type="text/javascript" src="lib/MathJax/MathJax.js?config=TeX-MML-AM_CHTML"></script>
-        <script type="text/x-mathjax-config">
-            MathJax.Hub.Config({
-                tex2jax: {
-                    inlineMath: [["$","$"]]
-                }
-            });
-        </script>
+        <link rel="stylesheet" href="lib/KaTeX/build/katex.css">
+        <script type="text/javascript" src="lib/KaTeX/build/katex.js"></script>
 
         <script type="text/javascript" src="build/app.js"></script>
     </head>
