started to work with css styles

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
     <head>
         <!--link rel="stylesheet" href="css/leagua.css"-->
 
+        <link rel="stylesheet" href="css/lia.css">
+
         <link rel="stylesheet" href="lib/highlight/styles/default.css">
         <script type="text/javascript" src="lib/highlight/highlight.pack.js"></script>
 
