added uglify to build

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="lib/KaTeX/build/katex.css">
         <script type="text/javascript" src="lib/KaTeX/build/katex.js"></script>
 
-        <script type="text/javascript" src="build/app.js"></script>
+        <script type="text/javascript" src="build/app.min.js"></script>
     </head>
     <body>
         <div id="lia"></div>
