better readme separation and makefile update for examples

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             const elmLia = document.querySelector('#lia');
 
             if (elmLia) {
-                const app = Elm.Editor.embed(elmLia);
+                const app = Elm.Main.embed(elmLia);
             }
         </script>
     </body>
