added different animations to effects

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <!--link rel="stylesheet" href="css/leagua.css"-->
 
         <link rel="stylesheet" href="css/lia.css">
+        <link rel="stylesheet" href="css/animate.css">
 
         <link rel="stylesheet" href="lib/highlight/styles/default.css">
         <script type="text/javascript" src="lib/highlight/highlight.pack.js"></script>
