added comment defines and responsiveVoice plugin

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <!--link rel="stylesheet" href="css/leagua.css"-->
-
+        <script src="http://code.responsivevoice.org/responsivevoice.js"></script>
         <link rel="stylesheet" href="css/lia.css">
         <link rel="stylesheet" href="css/animate.css">
 
