--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
                             const elmLia = document.querySelector('#lia');
 
                             if (elmLia) {
-                                const app = Elm.Editor.embed(elmLia, {script: rawFile.responseText});
+                                const app = Elm.Main.embed(elmLia, {script: rawFile.responseText});
                             }
                         }
                     }
