--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
                     if(rawFile.readyState === 4) {
                         if(rawFile.status === 200 || rawFile.status == 0) {
                             const elmLia = document.querySelector('#lia');
-
+                            console.log(rawFile.responseText);
                             if (elmLia) {
                                 const app = Elm.Main.embed(elmLia, {script: rawFile.responseText});
                             }
