Add light and dark theme for slide view, input controls not styled yet

--- a/assets/index.html
+++ b/assets/index.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="/css/vendor.css">
     <link rel="stylesheet" href="/css/app.css">
 
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
     <!-- Favicons -->
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <link rel="icon" href="/favicon.ico">
@@ -19,6 +22,6 @@
     <title>Lia Script</title>
 </head>
   <body>
-    <script>Elm.Main.embed(document.body);</script>
+    <script>Elm.Main.embed(document.body, {url: "https://raw.githubusercontent.com/andre-dietrich/lia/master/README.md"});</script>
   </body>
 </html>
