first steps in parsing separate

--- a/assets/index.html
+++ b/assets/index.html
@@ -34,7 +34,7 @@
               if(rawFile.readyState === 4) {
                   if(rawFile.status === 200 || rawFile.status == 0) {
 
-                      const app = Elm.Main.embed(document.body, {url: "" , script: ""});
+                      const app = Elm.Main.embed(document.body, {url: "" , script: rawFile.responseText});
 
                   }
               }
