--- a/assets/index.html
+++ b/assets/index.html
@@ -9,7 +9,7 @@
 
     <script type="text/javascript" src="js/vendor.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
-    <script type='text/javascript' src="js/lia.js"></script>
+    <script type='text/javascript' src="js/liascript.js"></script>
 
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.6/ace.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.6/ext-language_tools.js"></script>
@@ -53,7 +53,7 @@
       // };
 
       // const app = Elm.Main.embed(document.body, {url: "", script: "" }); //rawFile.responseText });
-      var lia = new Lia(document.body, "", "");
+      var lia = new LiaScript(document.body, "", "");
 
 
       // function evalOk(id, message) {
