--- a/assets/index.html
+++ b/assets/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!--script src='https://code.responsivevoice.org/responsivevoice.js'></script-->
+    <script src='https://code.responsivevoice.org/responsivevoice.js'></script>
 
     <script type="text/javascript" src="js/vendor.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
@@ -33,7 +33,7 @@
 
     <script>
       var lia = new LiaScript(document.body, "", "");
-      
+
       // class LiaError extends Error {
       //     constructor(message, files,...params) {
       //         super(...params);
