--- a/assets/index.html
+++ b/assets/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <script src='js/responsivevoice.js'></script>
+    <script type="text/javascript" src='js/responsivevoice.js'></script>
 
     <script type="text/javascript" src="js/vendor.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
