updated to side log

--- a/assets/index.html
+++ b/assets/index.html
@@ -29,9 +29,7 @@
   <body>
 
     <script>
-      var lia = new LiaScript(document.body, "", "");
-
-
+      var lia = new LiaScript(document.body, "");
     </script>
   </body>
 </html>
