added logo to liascript

--- a/assets/index.html
+++ b/assets/index.html
@@ -21,8 +21,8 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <!-- Favicons -->
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-    <link rel="icon" href="/favicon.ico">
+    <link rel="apple-touch-icon" href="/logo.png">
+    <link rel="icon" href="/logo.png" type="image/png">
 
     <title>Lia Script</title>
   </head>
