made everything available locally

--- a/assets/index.html
+++ b/assets/index.html
@@ -16,10 +16,10 @@
 
     <link rel="stylesheet" href="css/vendor.css">
     <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="css/material.css">
+    <link rel="stylesheet" href="css/roboto.css">
 
-    <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
+    
     <!-- Favicons -->
     <link rel="apple-touch-icon" href="/logo.png">
     <link rel="icon" href="/logo.png" type="image/png">
