--- a/assets/index.html
+++ b/assets/index.html
@@ -19,10 +19,38 @@
     <link rel="stylesheet" href="css/material.css">
     <link rel="stylesheet" href="css/roboto.css">
 
-    
+
     <!-- Favicons -->
     <link rel="apple-touch-icon" href="/logo.png">
     <link rel="icon" href="/logo.png" type="image/png">
+
+
+    <style>
+    .lds-dual-ring {
+      display: inline-block;
+      width: 150px;
+      height: 150px;
+    }
+    .lds-dual-ring:after {
+      content: " ";
+      display: block;
+      width: 128px;
+      height: 128px;
+      margin: 1px;
+      border-radius: 50%;
+      border: 5px solid #fff;
+      border-color: #000 transparent #000 transparent;
+      animation: lds-dual-ring 1.2s linear infinite;
+    }
+    @keyframes lds-dual-ring {
+      0% {
+        transform: rotate(0deg);
+      }
+      100% {
+        transform: rotate(360deg);
+      }
+    }
+    </style>
 
     <title>Lia Script</title>
   </head>
