added support for local files ... file://...

--- a/assets/index.html
+++ b/assets/index.html
@@ -21,8 +21,8 @@
 
 
     <!-- Favicons -->
-    <link rel="apple-touch-icon" href="/logo.png">
-    <link rel="icon" href="/logo.png" type="image/png">
+    <link rel="apple-touch-icon" href="logo.png">
+    <link rel="icon" href="logo.png" type="image/png">
 
 
     <style>
