not working example

--- a/assets/index.html
+++ b/assets/index.html
@@ -21,7 +21,8 @@
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.14/webcomponents-hi.js"></script>
-    <link rel="import" href="webcomponents/KatexFormula/KatexFormula.html">
+    <script src="https://cdn.jsdelivr.net/npm/katex@0.10.0/dist/katex.min.js"></script>
+    <script src="/webcomponents/KatexFormula/KatexFormula.js"></script>
 
     <!-- Favicons -->
     <link rel="apple-touch-icon" href="logo.png">
