formal seems to work

--- a/assets/index.html
+++ b/assets/index.html
@@ -19,10 +19,10 @@
     <link rel="stylesheet" href="css/material.css">
     <link rel="stylesheet" href="css/roboto.css">
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.10.0/dist/katex.min.css">
+    <!--link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.10.0/dist/katex.min.css"-->
 
     <script src="/webcomponents/webcomponents-hi.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/katex@0.10.0/dist/katex.min.js"></script>
+    <!--script src="https://cdn.jsdelivr.net/npm/katex@0.10.0/dist/katex.min.js"></script-->
     <script src="/webcomponents/KatexFormula/KatexFormula.js"></script>
 
     <!-- Favicons -->
