--- a/assets/index.html
+++ b/assets/index.html
@@ -14,15 +14,14 @@
     <script type="text/javascript" src="js/ace/ace.js"></script>
     <script type="text/javascript" src="js/ace/ext-language_tools.js"></script>
 
+
     <link rel="stylesheet" href="css/vendor.css">
     <link rel="stylesheet" href="css/app.css">
     <link rel="stylesheet" href="css/material.css">
     <link rel="stylesheet" href="css/roboto.css">
 
-    <!--link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.10.0/dist/katex.min.css"-->
-
     <script src="/webcomponents/webcomponents-hi.js"></script>
-    <!--script src="https://cdn.jsdelivr.net/npm/katex@0.10.0/dist/katex.min.js"></script-->
+    <script src="/webcomponents/KatexFormula/katex.js"></script>
     <script src="/webcomponents/KatexFormula/KatexFormula.js"></script>
 
     <!-- Favicons -->
