--- a/assets/index.html
+++ b/assets/index.html
@@ -10,6 +10,7 @@
     <script type="text/javascript" src="js/vendor.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
     <script type='text/javascript' src="js/liascript.js"></script>
+    <script type='text/javascript' src="js/katex.min.js"></script>
 
     <script type="text/javascript" src="js/ace/ace.js"></script>
     <script type="text/javascript" src="js/ace/ext-language_tools.js"></script>
@@ -20,9 +21,8 @@
     <link rel="stylesheet" href="css/material.css">
     <link rel="stylesheet" href="css/roboto.css">
 
-    <script src="/webcomponents/webcomponents-hi.js"></script>
-    <script src="/webcomponents/KatexFormula/katex.js"></script>
-    <script src="/webcomponents/KatexFormula/KatexFormula.js"></script>
+    <script src="webcomponents/webcomponents-hi.js"></script>
+    <script src="webcomponents/KatexFormula/KatexFormula.js"></script>
 
     <!-- Favicons -->
     <link rel="apple-touch-icon" href="logo.png">
