moved scss locals and logo

--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>LiaScript</title>
+    <title>Lia</title>
+
+    <!-- Favicons -->
+    <link rel="apple-touch-icon" href="logo.png">
+    <link rel="icon" href="logo.png" type="image/png">
+
   </head>
   <body>
 
