icons and sass included

--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -3,6 +3,10 @@
   <head>
     <title>Lia</title>
 
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
     <!-- Favicons -->
     <link rel="apple-touch-icon" href="logo.png">
     <link rel="icon" href="logo.png" type="image/png">
