added all ressources styles fonts and responsive voice

--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -3,9 +3,15 @@
   <head>
     <title>Lia</title>
 
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <script type="text/javascript" src='responsivevoice.js'></script>
+
     <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="css/material.css">
+    <link rel="stylesheet" href="css/roboto.css">
 
     <!-- Favicons -->
     <link rel="apple-touch-icon" href="logo.png">
