--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -7,7 +7,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <script type="text/javascript" src='responsivevoice.js'></script>
+    <script type="text/javascript" src='responsivevoice.js'>
+      responsiveVoice.enableEstimationTimeout = true;
+    </script>
 
     <!-- Fonts -->
     <link rel="stylesheet" href="css/material.css">
