updated missing manifest stuff

--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -11,6 +11,19 @@
       responsiveVoice.enableEstimationTimeout = true;
     </script>
 
+    <link rel="shortcut icon" sizes="192x192" href="logo_192.png">
+
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="application-name" content="Lia">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="LiaScript">
+    <meta name="msapplication-TileImage" content="logo_192.png">
+    <meta name="msapplication-TileColor" content="#0071c5">
+    <meta name="msapplication-tap-highlight" content="no">
+
+    <link rel="manifest" href="manifest.webmanifest">
+
     <!-- Fonts -->
     <link rel="stylesheet" href="css/material.css">
     <link rel="stylesheet" href="css/roboto.css">
