updated langinfo in index

--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Lia</title>
 
@@ -21,8 +21,11 @@
     <meta name="msapplication-TileImage" content="logo_192.png">
     <meta name="msapplication-TileColor" content="#0071c5">
     <meta name="msapplication-tap-highlight" content="no">
+    <meta name="theme-color" content="#000000">
 
     <link rel="manifest" href="manifest.webmanifest">
+
+
 
     <!-- Fonts -->
     <link rel="stylesheet" href="css/material.css">
@@ -61,6 +64,9 @@
 
   </head>
   <body id="lia">
+    <noscript>
+      This page requires JavaScript to be enabled!
+    </noscript>
     <script>
     if ('serviceWorker' in navigator) {
         window.addEventListener('load', function () {
