--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -67,6 +67,37 @@
     <noscript>
       This page requires JavaScript to be enabled!
     </noscript>
+
+    <div id="IE-message" hidden="true">
+      <h1>LiaScript - Problem</h1>
+      <p>
+        Hello! Welcome to LiaScript. This site is not fully supported in
+        Internet Explorer 11 (and earlier) versions.
+      </p>
+      <p>
+        As an alternative, you can use either of the options below to browse the
+        site:
+      </p>
+      <ol>
+        <li>Use Firefox browser. Here is the <a href="http://www.mozilla.org/en-US/firefox/new/">download link.</a></li>
+        <li>Use Google Chrome browser. Here is the <a href="https://support.google.com/chrome/answer/95346?hl=en">download link.</a></li>
+      </ol>
+      <p>
+        Thanks.
+      </p>
+    </div>
+
+    <script>
+      let ua = window.navigator.userAgent;
+
+      if (ua.indexOf('Edge/')    > 0 ||
+          ua.indexOf('Trident/') > 0 ||
+          ua.indexOf('MSIE ')    > 0) {
+        console.warn("unsupported browser");
+        document.getElementById("IE-message").hidden = false;
+      }
+    </script>
+
     <script>
     if ('serviceWorker' in navigator) {
         window.addEventListener('load', function () {
