updated build to parcel

--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -9,14 +9,14 @@
 
     <script src="https://code.responsivevoice.org/responsivevoice.js?key=blVZszUw"></script>
 
-    <link rel="shortcut icon" sizes="192x192" href="logo_192.png">
+    <link rel="shortcut icon" sizes="192x192" href="./logo_192.png">
 
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="application-name" content="Lia">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="LiaScript">
-    <meta name="msapplication-TileImage" content="logo_192.png">
+    <meta name="msapplication-TileImage" content="./logo_192.png">
     <meta name="msapplication-TileColor" content="#0071c5">
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="theme-color" content="#000000">
@@ -30,7 +30,7 @@
     <link rel="stylesheet" href="css/roboto.css"-->
 
     <!-- Favicons -->
-    <link rel="apple-touch-icon" href="logo.png">
+    <link rel="apple-touch-icon" href="./logo.png">
     <link rel="icon" href="logo.png" type="image/png">
 
     <style>
@@ -60,10 +60,9 @@
     }
     </style>
 
-
     <link rel="stylesheet" href="../scss/main.scss">
     <link rel="stylesheet" href="../../node_modules/material-icons/iconfont/material-icons.scss">
-  
+
   </head>
   <body id="lia">
     <noscript>
