--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -103,12 +103,17 @@
     <script src="../javascript/webcomponents/ace.js"></script>
     <script src="../javascript/webcomponents/katex.js"></script>
 
-    <!--script>
+    <script>
     if ('serviceWorker' in navigator) {
         window.addEventListener('load', function () {
-          navigator.serviceWorker.register("/sw.js").then(console.log).catch(console.error);
+          let sw = "./sw.js"
+          try {
+            navigator.serviceWorker.register(sw).then(console.log).catch(console.error);
+          } catch (e) {
+            console.warn("sw: ", e);
+          }
         })
       }
-    </script-->
+    </script>
   </body>
 </html>
