updated final build, ie still does not work

--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -7,6 +7,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-115796379-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-115796379-1');
+    </script>
+
+
     <script src="https://code.responsivevoice.org/responsivevoice.js?key=blVZszUw"></script>
 
     <link rel="shortcut icon" sizes="192x192" href="./logo_192.png">
@@ -87,17 +96,6 @@
         Thanks.
       </p>
     </div>
-
-    <script>
-      let ua = window.navigator.userAgent;
-
-      if (ua.indexOf('Edge/')    > 0 ||
-          ua.indexOf('Trident/') > 0 ||
-          ua.indexOf('MSIE ')    > 0) {
-        console.warn("unsupported browser");
-        document.getElementById("IE-message").hidden = false;
-      }
-    </script>
 
     <script src="../index.js"></script>
     <script src="../javascript/webcomponents/ace.js"></script>
