updated google info ...

--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -35,8 +35,8 @@
 
 
     <!-- Fonts -->
-    <!--link rel="stylesheet" href="css/material.css">
-    <link rel="stylesheet" href="css/roboto.css"-->
+    <link rel="stylesheet" href="css/material.css">
+    <link rel="stylesheet" href="css/roboto.css">
 
     <!-- Favicons -->
     <link rel="apple-touch-icon" href="./logo.png">
