--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -30,13 +30,10 @@
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="theme-color" content="#000000">
 
-    <link rel="manifest" href="manifest.webmanifest">
-
-
+    <link rel="manifest" href="./manifest.webmanifest">
 
     <!-- Fonts -->
-    <link rel="stylesheet" href="css/material.css">
-    <link rel="stylesheet" href="css/roboto.css">
+    <link rel="stylesheet" href="../../vendor/roboto/roboto.css">
 
     <!-- Favicons -->
     <link rel="apple-touch-icon" href="./logo.png">
