--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -9,10 +9,12 @@
 
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-115796379-1"></script>
     <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'UA-115796379-1');
+      if (process.env.NODE_ENV !== 'development') {
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'UA-115796379-1');
+      }
     </script>
 
 
