added running swipe events through ports

--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -72,7 +72,7 @@
     <link rel="stylesheet" href="../../node_modules/material-icons/iconfont/material-icons.scss">
 
   </head>
-  <body id="lia">
+  <body>
     <noscript>
       This page requires JavaScript to be enabled!
     </noscript>
